# CurrencyConverter_Server_Cplusplus

./: .gitignore  CMakeLists.txt  README.md  config.json  start_currency_converter.sh  start_currency_converter_server.sh
.github/workflows/: cmake-single-platform.yml  tests-pipeline.yml
data/: currencies_list.json
data/currencies_exchange_rate_cache/: aed.json  afn.json  all.json  amd.json  ang.json  aoa.json  ars.json  aud.json  awg.json  azn.json  bam.json  bbd.json  bdt.json  bgn.json  bhd.json  bif.json  bnd.json  bob.json  brl.json  bsd.json  bwp.json  byn.json  bzd.json  cad.json  cdf.json  chf.json  clp.json  cny.json  cop.json  crc.json  cup.json  cve.json  czk.json  djf.json  dkk.json  dop.json  dzd.json  egp.json  ern.json  etb.json  (+105 more)
src/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/config/: CMakeLists.txt  config.cpp  config.h  config_loader.cpp  config_loader.h
src/converter/: CMakeLists.txt  converter.cpp  converter.h
src/currencies_exchange_rate_databank/: CMakeLists.txt  config.h  currencies_exchange_rate_databank.cpp  currencies_exchange_rate_databank.h  currencies_exchange_rate_databank_initializer.cpp  currencies_exchange_rate_databank_initializer.h  currencies_exchange_rate_databank_loader.cpp  currencies_exchange_rate_databank_loader.h  currencies_exchange_rate_databank_modifier.cpp  currencies_exchange_rate_databank_modifier.h  currencies_exchange_rate_databank_update_manager.cpp  currencies_exchange_rate_databank_update_manager.h  currencies_exchange_rate_databank_updater.cpp  currencies_exchange_rate_databank_updater.h  utilities.cpp  utilities.h
src/downloader/: CMakeLists.txt  curl_manager.cpp  curl_manager.h  download_manager.cpp  download_manager.h  download_report.cpp  download_report.h  downloader.cpp  downloader.h  utilities.cpp  utilities.h
src/json_processing/: CMakeLists.txt  exceptions.h  json_parser.cpp  json_parser.h  json_processing_config.h  json_reader.cpp  json_reader.h  json_validator.cpp  json_validator.h  json_writer.cpp  json_writer.h
src/message_processing/: CMakeLists.txt  calculate_exchange_request_validator.cpp  calculate_exchange_request_validator.h  exceptions.h  inbound_message_queue.cpp  inbound_message_queue.h  request_parser.cpp  request_parser.h  request_processor.cpp  request_processor.h  response_factory.cpp  response_factory.h
src/messages/: CMakeLists.txt  abstract_message.h  abstract_request.h  abstract_response.h  message_contract.h  messages.cpp  parsed_inbound_message.h  raw_inbound_message.h
src/messages/requests/: calculate_exchange_request.h  get_config_request.h  update_cache_request.h
src/messages/responses/: calculate_exchange_response.h  get_config_response.h  update_cache_response.h
src/socket_communication/: CMakeLists.txt  client_info_factory.h  client_socket_handler.cpp  client_socket_handler.h  connection_manager.cpp  connection_manager.h  exceptions.h  server_socket_handler.cpp  server_socket_handler.h  socket_utilities.cpp  socket_utilities.h
src/types/: CMakeLists.txt  abstract_string_wrapper.h  client_id.h  client_info.cpp  client_info.h  correlation_id.h  currencies_list_file_content.h  currency_code.cpp  currency_code.h  currency_exchange_rates_json.h  definitions.h  exchange_rate.h  message_body.h  message_type.h  money_amount.h  timestamp.h
src/types/containers/: exchange_rate_data.h
src/utilities/: CMakeLists.txt  file_loader.h  files_helper.h  timer.cpp  timer.h  unique_id_generator.h
tests/data/: currencies_list.json
tests/data/currencies_exchange_rate_cache/: gbp.json  usd.json
tests/data/jsons/: valid_usd.json
tests/scripts/: config.py  run_test.py
tests/scripts/request_tests/: calculate_exchange_request_test.py  custom_request_test.py  get_config_request_test.py  update_cache_request_test.py
tests/scripts/utilities/: client_socket_handler.py  test_procedures.py  test_utilities.py
tests/unit_tests/: CMakeLists.txt  client_socket_handler_test.cpp  common_test_fixture.h  converter_test.cpp  currencies_exchange_rate_databank_modifier_test.cpp  currencies_exchange_rate_databank_test.cpp  currencies_exchange_rate_databank_updater_test.cpp  currency_code_test.cpp  downloader_test.cpp  json_parser_test.cpp  json_validator_test.cpp  request_parser_test.cpp  request_validator_test.cpp  test_utilities.cpp  test_utilities.h
tests/unit_tests/mocks/: client_fake.h  server_fake.h
tests/unit_tests/stubs/: client_id_stub.h  config_stub.h  correlation_id_stub.h  currencies_databank_stub.h  currencies_list_file_content_stub.h  currency_code_stub.h  message_body_stub.h  response_stub.h
